# PortfolioOptimalization

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.py  tox.ini
src/: calculate.py  example.py
